RESOLVED FIXED82371
WebKit fails to load a staged framework when soft linking
https://bugs.webkit.org/show_bug.cgi?id=82371
Summary WebKit fails to load a staged framework when soft linking
Timothy Hatcher
Reported 2012-03-27 12:49:29 PDT
The Web Inspector framework is failing to load when the framework does not exist at the system install path.
Attachments
Proposed Change (5.95 KB, patch)
2012-03-27 13:00 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2012-03-27 12:58:02 PDT
Timothy Hatcher
Comment 2 2012-03-27 13:00:53 PDT
Created attachment 134118 [details] Proposed Change
WebKit Review Bot
Comment 3 2012-03-27 13:04:29 PDT
Attachment 134118 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/mac/SoftLinking.h:58: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 4 2012-03-27 13:44:36 PDT
Comment on attachment 134118 [details] Proposed Change Clearing flags on attachment: 134118 Committed r112312: <http://trac.webkit.org/changeset/112312>
WebKit Review Bot
Comment 5 2012-03-27 13:44:40 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2012-03-28 23:43:23 PDT
Comment on attachment 134118 [details] Proposed Change View in context: https://bugs.webkit.org/attachment.cgi?id=134118&action=review Is it correct to try unstaged location first, and then staged location? It seems like it should be the opposite order. > Source/WebCore/platform/mac/SoftLinking.h:55 > -#define SOFT_LINK_PRIVATE_FRAMEWORK_OPTIONAL(framework) \ > +#define SOFT_LINK_STAGED_FRAMEWORK_OPTIONAL(framework, unstagedLocation) \ The new name doesn't appear to correctly describe the behavior - the macro loads either installed or staged framework. Also, shouldn't all soft link macros support staged frameworks, making the clarification redundant?
Mark Rowe (bdash)
Comment 7 2012-03-28 23:54:21 PDT
(In reply to comment #6) > (From update of attachment 134118 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=134118&action=review > > Is it correct to try unstaged location first, and then staged location? It seems like it should be the opposite order. It's counter-intuitive, but looking in the normal location first is the right behavior as dlopen will still respect any dyld environment variables that influence the search path. > > Source/WebCore/platform/mac/SoftLinking.h:55 > > -#define SOFT_LINK_PRIVATE_FRAMEWORK_OPTIONAL(framework) \ > > +#define SOFT_LINK_STAGED_FRAMEWORK_OPTIONAL(framework, unstagedLocation) \ > > The new name doesn't appear to correctly describe the behavior - the macro loads either installed or staged framework. > > Also, shouldn't all soft link macros support staged frameworks, making the clarification redundant? Given the limited application of staged frameworks there wouldn't be much benefit to doing this.
Note You need to log in before you can comment on or make changes to this bug.