Make WebKit properly load a staged framework when soft linking.

https://webkit.org/b/82371
rdar://problem/11125989

Reviewed by Dan Bernstein.

Source/WebCore:

* platform/mac/SoftLinking.h: Replaced SOFT_LINK_PRIVATE_FRAMEWORK_OPTIONAL with
SOFT_LINK_STAGED_FRAMEWORK_OPTIONAL and made it use the StagedFrameworks path
if the first dlopen failed.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm: Use SOFT_LINK_STAGED_FRAMEWORK_OPTIONAL to properly
load the WebInspector framework.

Source/WebKit2:

* UIProcess/mac/WebInspectorProxyMac.mm: Use SOFT_LINK_STAGED_FRAMEWORK_OPTIONAL to properly
load the WebInspector framework.
* WebProcess/WebPage/mac/WebInspectorMac.mm: Ditto.


Canonical link: https://commits.webkit.org/99738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112312 268f45cc-cd09-0410-ab3c-d52691b4dbfc